Slight update for getting cash close with date range